# OS-labs-2024

./: README.md
lw1/: CMakeLists.txt  main.c
lw1/include/: parent.h  utils.h
lw1/src/: child1.c  child2.c  parent.c  utils.c
lw2/: CMakeLists.txt  main.c
lw2/include/: point.h  thread_pool.h  triangle.h
lw2/src/: point.c  thread_pool.c  triangle.c
lw3/: CMakeLists.txt  main.c
lw3/include/: utils.h
lw3/src/: child1.c  child2.c  parent.c
lw4/: CMakeLists.txt  dynamic_main.c  linking_main.c
lw4/include/: gcf.h  square.h
lw4/src/: gcf_euclid.c  gcf_naive.c  square_rectangle.c  square_triangle.c
lw5-7/: CMakeLists.txt  test_node_creation.cpp
lw5-7/include/: tools.h
lw5-7/src/: controller.cpp  tools.cpp  worker.cpp
tests/lw1/: CMakeLists.txt  lab1_test.cpp
tests/lw2/: CMakeLists.txt  lab2_test.cpp
tests/lw3/: CMakeLists.txt  lab3_test.cpp
tests/lw4/: CMakeLists.txt  lab4_test.cpp
